--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,15 @@
-<div class="login-container">
-  <h2>Login</h2>
-  <form (ngSubmit)="loginWithDummyAuth()">
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" id="email" [(ngModel)]="email" name="email" required>
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" id="password" [(ngModel)]="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-  </form>
-</div>
+<h1>Login</h1>
+
+<div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <input type="text" placeholder="Email" formControlName="email" />
+  </div>
+  <div class="form-group">
+    <input type="password" placeholder="Password" formControlName="password" />
+  </div>
+  <div>
+    <button type="submit">Sign In</button>
+  </div>
+</form>
+<button (click)="navigateToSignUp()">Not a member? Sign up</button>
