--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,10 @@
 <nav class="navbar">
   <a class="navbar-brand" routerLink="/">Token Management App</a>
   <div class="navbar-nav">
-    <a
-      class="nav-item nav-link"
-      *ngIf="!authServices.getAuthStatus()"
-      routerLink="/login"
-      >Login</a
-    >
-    <a
-      class="nav-item nav-link"
-      *ngIf="authServices.getAuthStatus()"
-      (click)="logout()"
-      >Logout</a
-    >
-    <a
-      class="nav-item nav-link"
-      *ngIf="authServices.getAuthStatus()"
-      routerLink="/dashboard"
-      >Dashboard</a
-    >
-    <a
-      class="nav-item nav-link"
-      *ngIf="authServices.getAuthStatus() && authServices.isAdmin()"
-      routerLink="/admin"
-      >Admin</a
-    >
+    <a class="nav-item nav-link" *ngIf="!authService.getAuthStatus()" routerLink="/login">Login</a>
+    <a class="nav-item nav-link" *ngIf="authService.getAuthStatus()" (click)="logout()">Logout</a>
+    <a class="nav-item nav-link" *ngIf="authService.getAuthStatus()" routerLink="/dashboard">Dashboard</a>
+    <a class="nav-item nav-link" *ngIf="authService.getAuthStatus() && authService.isAdmin()" routerLink="/admin">Admin</a>
   </div>
 </nav>
 <div class="container">
