--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -111,4 +111,73 @@
       </tbody>
     </table>
   </div>
+
+  <button class="btn btn-primary mb-4" (click)="toggleTokenForm()">
+    Add Token
+  </button>
+
+  <div *ngIf="showTokenForm" class="card p-4 mb-4">
+    <form [formGroup]="tokenForm" (ngSubmit)="addToken()">
+      <div class="form-group mb-3">
+        <label for="tokenName">Token Name</label>
+        <input
+          id="tokenName"
+          class="form-control"
+          formControlName="tokenName"
+          type="text"
+        />
+      </div>
+      <div class="form-group mb-3">
+        <label for="tokenSymbol">Token Symbol</label>
+        <input
+          id="tokenSymbol"
+          class="form-control"
+          formControlName="tokenSymbol"
+          type="text"
+        />
+      </div>
+      <div class="form-group mb-3">
+        <label for="tokenId">Token ID</label>
+        <input
+          id="tokenId"
+          class="form-control"
+          formControlName="tokenId"
+          type="text"
+        />
+      </div>
+      <button
+        type="submit"
+        class="btn btn-success"
+        [disabled]="tokenForm.invalid"
+      >
+        Submit
+      </button>
+    </form>
+  </div>
+
+  <div class="card p-4">
+    <h2 class="mb-4">All Tokens</h2>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Token Name</th>
+          <th scope="col">Token Symbol</th>
+          <th scope="col">Token ID</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let token of tokens">
+          <td>{{ token.tokenName }}</td>
+          <td>{{ token.tokenSymbol }}</td>
+          <td>{{ token.tokenId }}</td>
+          <td>
+            <button class="btn btn-danger" (click)="deleteToken(token.id)">
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
