--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -42,6 +42,24 @@
           type="email"
         />
       </div>
+      <div class="form-group mb-3">
+        <label for="Ether">Ether Address</label>
+        <input
+          id="Ether"
+          class="form-control"
+          formControlName="Ether"
+          type="text"
+        />
+      </div>
+      <div class="form-group mb-3">
+        <label for="alias">Alias</label>
+        <input
+          id="alias"
+          class="form-control"
+          formControlName="alias"
+          type="text"
+        />
+      </div>
       <button
         type="submit"
         class="btn btn-success"
@@ -105,14 +123,18 @@
     <table class="table table-striped">
       <thead>
         <tr>
+          <th scope="col">Alias</th>
           <th scope="col">Account ID</th>
           <th scope="col">Account Private Key</th>
+          <th scope="col">Account EtherAddress</th>
           <th scope="col">Email</th>
-          <th scope="col">Actions</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let account of accounts">
+          <td>
+            {{ account.alias }}
+          </td>
           <td>
             {{ account.accountId }}
             <button
@@ -131,6 +153,15 @@
               Copy
             </button>
           </td>
+          <td>
+            {{ account.Ether }}
+            <button
+              class="btn btn-outline-secondary btn-sm"
+              (click)="copyToClipboard(account.Ether)"
+            >
+              Copy
+            </button>
+          </td>
           <td>{{ account.email }}</td>
           <td>
             <button
@@ -145,49 +176,6 @@
     </table>
   </div>
 
-  <button class="btn btn-primary mb-4" (click)="toggleTokenForm()">
-    Add Token
-  </button>
-
-  <div *ngIf="showTokenForm" class="card p-4 mb-4">
-    <form [formGroup]="tokenForm" (ngSubmit)="addToken()">
-      <div class="form-group mb-3">
-        <label for="tokenName">Token Name</label>
-        <input
-          id="tokenName"
-          class="form-control"
-          formControlName="tokenName"
-          type="text"
-        />
-      </div>
-      <div class="form-group mb-3">
-        <label for="tokenSymbol">Token Symbol</label>
-        <input
-          id="tokenSymbol"
-          class="form-control"
-          formControlName="tokenSymbol"
-          type="text"
-        />
-      </div>
-      <div class="form-group mb-3">
-        <label for="tokenId">Token ID</label>
-        <input
-          id="tokenId"
-          class="form-control"
-          formControlName="tokenId"
-          type="text"
-        />
-      </div>
-      <button
-        type="submit"
-        class="btn btn-success"
-        [disabled]="tokenForm.invalid"
-      >
-        Submit
-      </button>
-    </form>
-  </div>
-
   <div class="card p-4">
     <h2 class="mb-4">All Tokens</h2>
     <table class="table table-striped">
@@ -196,7 +184,7 @@
           <th scope="col">Token Name</th>
           <th scope="col">Token Symbol</th>
           <th scope="col">Token ID</th>
-          <th scope="col">Actions</th>
+          <th scope="col">EtherAddress</th>
         </tr>
       </thead>
       <tbody>
@@ -212,12 +200,14 @@
               Copy
             </button>
           </td>
+
           <td>
+            {{ token.tokenEther }}
             <button
-              class="btn btn-danger"
-              (click)="confirmDeleteToken(token.id)"
+              class="btn btn-outline-secondary btn-sm"
+              (click)="copyToClipboard(token.tokenEther)"
             >
-              Delete
+              Copy
             </button>
           </td>
         </tr>
@@ -234,10 +224,7 @@
       Please repeat this word to confirm deletion:
       <strong>{{ randomWord }}</strong>
     </p>
-    <form
-      [formGroup]="deleteForm"
-      (ngSubmit)="showDeleteAccountForm ? deleteAccount() : deleteToken()"
-    >
+    <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
       <div class="form-group mb-3">
         <input
           id="securityWord"
