chore: Update npm dependencies and add @hashgraph/sdk and axios
This commit updates the npm dependencies in the package.json file to their latest stable versions. Additionally, it adds the @hashgraph/sdk and axios packages to the project. These changes enhance the functionality of the application by incorporating the @hashgraph/sdk library for interacting with the Hedera Hashgraph network and the axios library for making HTTP requests.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,6 +9,10 @@
     Logout
   </button>
 
+  <h3>Account Balances</h3>
+  <p>MST Balance: {{ mstBalance }}</p>
+  <p>MPT Balance: {{ mptBalance }}</p>
+
   <button class="btn btn-primary mb-4" (click)="toggleForm()">
     Add Account
   </button>
@@ -132,7 +136,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let account of accounts">
-          <td>
+           <td>
             {{ account.alias }}
           </td>
           <td>
@@ -171,6 +175,7 @@
               Delete
             </button>
           </td>
+         
         </tr>
       </tbody>
     </table>
