--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -17,6 +17,10 @@
     Add Account
   </button>
 
+  <button class="btn btn-secondary mb-4" (click)="toggleTransferForm()">
+    Transfer Tokens
+  </button>
+
   <div *ngIf="showForm" class="card p-4 mb-4">
     <form [formGroup]="accountForm" (ngSubmit)="addAccount()">
       <div class="form-group mb-3">
@@ -70,6 +74,44 @@
         [disabled]="accountForm.invalid"
       >
         Submit
+      </button>
+    </form>
+  </div>
+
+  <div *ngIf="showTransferForm" class="card p-4 mb-4">
+    <form [formGroup]="transferForm" (ngSubmit)="transferTokens()">
+      <div class="form-group mb-3">
+        <label for="recipientAccountId">Recipient Account ID</label>
+        <input
+          id="recipientAccountId"
+          class="form-control"
+          formControlName="recipientAccountId"
+          type="text"
+        />
+      </div>
+      <div class="form-group mb-3">
+        <label for="transferAmount">Transfer Amount</label>
+        <input
+          id="transferAmount"
+          class="form-control"
+          formControlName="transferAmount"
+          type="number"
+        />
+      </div>
+      <div class="form-group mb-3">
+        <label for="tokenType">Token Type</label>
+        <select id="tokenType" class="form-control" formControlName="tokenType">
+          <option value="MST">MST</option>
+          <option value="MPT">MPT</option>
+        </select>
+      </div>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="transferForm.invalid"
+      >
+        Transfer
+        <span *ngIf="transferSpinner" class="spinner-border spinner-border-sm ms-2"></span>
       </button>
     </form>
   </div>
@@ -225,7 +267,7 @@
       <input
         id="mintMstAmount"
         class="form-control"
-       [(ngModel)]="mintMstAmount"
+        [(ngModel)]="mintMstAmount"
         type="number"
       />
     </div>
