--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -78,43 +78,46 @@
     </form>
   </div>
 
-  <div *ngIf="showTransferForm" class="card p-4 mb-4">
-    <form [formGroup]="transferForm" (ngSubmit)="transferTokens()">
-      <div class="form-group mb-3">
-        <label for="recipientAccountId">Recipient Account ID</label>
-        <input
-          id="recipientAccountId"
-          class="form-control"
-          formControlName="recipientAccountId"
-          type="text"
-        />
+<div *ngIf="showTransferForm" class="card p-4 mb-4">
+  <form [formGroup]="transferForm" (ngSubmit)="transferTokens()">
+    <div class="form-group mb-3">
+      <label for="recipientAccountId">Recipient Account ID</label>
+      <input
+        id="recipientAccountId"
+        class="form-control"
+        formControlName="recipientAccountId"
+        type="text"
+      />
+      <div *ngIf="transferForm.controls['recipientAccountId'].invalid && transferForm.controls['recipientAccountId'].touched" class="text-danger">
+        Invalid Account ID. 
       </div>
-      <div class="form-group mb-3">
-        <label for="transferAmount">Transfer Amount</label>
-        <input
-          id="transferAmount"
-          class="form-control"
-          formControlName="transferAmount"
-          type="number"
-        />
-      </div>
-      <div class="form-group mb-3">
-        <label for="tokenType">Token Type</label>
-        <select id="tokenType" class="form-control" formControlName="tokenType">
-          <option value="MST">MST</option>
-          <option value="MPT">MPT</option>
-        </select>
-      </div>
-      <button
-        type="submit"
-        class="btn btn-primary"
-        [disabled]="transferForm.invalid"
-      >
-        Transfer
-        <span *ngIf="transferSpinner" class="spinner-border spinner-border-sm ms-2"></span>
-      </button>
-    </form>
-  </div>
+    </div>
+    <div class="form-group mb-3">
+      <label for="transferAmount">Transfer Amount</label>
+      <input
+        id="transferAmount"
+        class="form-control"
+        formControlName="transferAmount"
+        type="number"
+      />
+    </div>
+    <div class="form-group mb-3">
+      <label for="tokenType">Token Type</label>
+      <select id="tokenType" class="form-control" formControlName="tokenType">
+        <option value="MST">MST</option>
+        <option value="MPT">MPT</option>
+      </select>
+    </div>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      [disabled]="transferForm.invalid"
+    >
+      Transfer
+      <span *ngIf="transferSpinner" class="spinner-border spinner-border-sm ms-2"></span>
+    </button>
+  </form>
+</div>
 
   <div class="card p-4 mb-4">
     <h2 class="mb-4">Query Account</h2>
