--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,10 @@
+.container {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
 .login-container {
   width: 300px;
   margin: 0 auto;
@@ -14,11 +21,6 @@ h2 {
 
 .form-group {
   margin-bottom: 1rem;
-}
-
-label {
-  display: block;
-  margin-bottom: 0.5rem;
 }
 
 input {
@@ -46,4 +48,14 @@ button:hover {
   color: red;
   margin-top: 1rem;
   text-align: center;
+}
+
+.alert.alert-danger {
+  color: red;
+  text-align: center;
+}
+
+.signup-link {
+  text-align: center;
+  margin-top: 20px;
 }
