--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,59 @@
-<div class="login-container">
-  <h1>Login</h1>
-
-  <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-
-  <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <input type="email" placeholder="Email" formControlName="email" />
+<div class="container">
+  <div class="login-container">
+    <h2>Login</h2>
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <input
+          type="email"
+          placeholder="Email"
+          formControlName="email"
+          class="form-control"
+        />
+        <div
+          class="error-message"
+          *ngIf="
+            form.get('email').hasError('required') &&
+            form.get('email').touched
+          "
+        >
+          Email is required.
+        </div>
+        <div
+          class="error-message"
+          *ngIf="
+            form.get('email').hasError('email') &&
+            form.get('email').touched
+          "
+        >
+          Invalid email format.
+        </div>
+      </div>
+      <div class="form-group">
+        <input
+          type="password"
+          placeholder="Password"
+          formControlName="password"
+          class="form-control"
+        />
+        <div
+          class="error-message"
+          *ngIf="
+            form.get('password').hasError('required') &&
+            form.get('password').touched
+          "
+        >
+          Password is required.
+        </div>
+      </div>
+      <button type="submit" [disabled]="form.invalid">Sign In</button>
+    </form>
+    <div class="alert alert-danger" *ngIf="authFailed">
+      Authentication failed
     </div>
-    <div class="form-group">
-      <input type="password" placeholder="Password" formControlName="password" />
-    </div>
-    <button type="submit">Sign In</button>
-  </form>
-  <button *ngIf="authService.currentUserSig()" (click)="authService.logout()">Logout</button>
-  <button (click)="navigateToSignUp()">Not a member? Sign up</button>
+    <!-- <button class="signup-link">
+      Not a member? <a (click)="navigateToSignUp()">Sign up now</a>
+    </button> -->
+    <button *ngIf="authService.currentUserSig()" (click)="authService.logout()">Logout</button>
+  </div>
 </div>
