--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -6,13 +6,64 @@
       <input type="text" placeholder="Username" formControlName="username" />
     </div>
     <div class="form-group">
-      <input type="email" placeholder="Email" formControlName="email" />
+      <input
+        type="email"
+        placeholder="Email"
+        formControlName="email"
+        class="form-control"
+      />
+      <div
+        class="error-message"
+        *ngIf="
+          form.get('email').hasError('required') &&
+          form.get('email').touched
+        "
+      >
+        Email is required.
+      </div>
+      <div
+        class="error-message"
+        *ngIf="
+          form.get('email').hasError('email') &&
+          form.get('email').touched
+        "
+      >
+        Invalid email format.
+      </div>
     </div>
     <div class="form-group">
-      <input type="password" placeholder="Password" formControlName="password" />
+      <input
+        type="password"
+        placeholder="Password"
+        formControlName="password"
+        class="form-control"
+      />
+      <div
+        class="error-message"
+        *ngIf="
+          form.get('password').hasError('required') &&
+          form.get('password').touched
+        "
+      >
+        Password is required.
+      </div>
+      <div
+        class="error-message"
+        *ngIf="
+          form.get('password').hasError('minlength') &&
+          form.get('password').touched
+        "
+      >
+        Password must be at least 6 characters long.
+      </div>
     </div>
-    <button type="submit">Sign Up</button>
+    <button type="submit" [disabled]="form.invalid">Sign Up</button>
   </form>
+  <div class="alert alert-danger" *ngIf="authFailed">
+    Authentication failed
+  </div>
+  <button class="login-link my-2">
+    Already a member? <a (click)="navigateToLogin()">Sign in now</a>
+  </button>
   <button *ngIf="authService.currentUserSig()" (click)="authService.logout()">Logout</button>
-  <button (click)="navigateToLogin()">Already a member? Login</button>
 </div>
