feat: Update admin component to improve balance display and add delete account confirmation
This commit updates the admin component to improve the display of balances by rounding down the balance values using Math.floor(). It also adds a confirmation form for deleting accounts, which requires the user to repeat a randomly generated word to confirm the deletion. These changes enhance the user experience by providing more accurate and readable balance information and adding an extra layer of confirmation for account deletions.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -303,8 +303,8 @@
           <th scope="col">Alias</th>
           <th scope="col">Account ID</th>
           <th scope="col">Account Private Key</th>
-          <th scope="col">Ether Address</th>
           <th scope="col">Email</th>
+          <th scope="col">Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -341,7 +341,29 @@
         </tr>
       </tbody>
     </table>
+     <div *ngIf="showDeleteAccountForm" class="card p-4 mb-4">
+    <h2 class="mb-4">Confirm Deletion</h2>
+    <p>
+      Please repeat this word to confirm deletion:
+      <strong>{{ randomWord }}</strong>
+    </p>
+    <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
+      <div class="form-group mb-3">
+        <input
+          id="securityWord"
+          class="form-control"
+          formControlName="securityWord"
+          type="text"
+        />
+      </div>
+      <button type="submit" class="btn btn-danger">Confirm</button>
+      <button type="button" class="btn btn-secondary" (click)="cancelDelete()">
+        Cancel
+      </button>
+    </form>
   </div>
+  </div>
+  
 
   <div class="card p-4">
     <h2 class="mb-4">All Tokens</h2>
@@ -381,28 +403,5 @@
     </table>
   </div>
 
-  <div
-    *ngIf="showDeleteAccountForm || showDeleteTokenForm"
-    class="card p-4 mb-4"
-  >
-    <h2 class="mb-4">Confirm Deletion</h2>
-    <p>
-      Please repeat this word to confirm deletion:
-      <strong>{{ randomWord }}</strong>
-    </p>
-    <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
-      <div class="form-group mb-3">
-        <input
-          id="securityWord"
-          class="form-control"
-          formControlName="securityWord"
-          type="text"
-        />
-      </div>
-      <button type="submit" class="btn btn-danger">Confirm</button>
-      <button type="button" class="btn btn-secondary" (click)="cancelDelete()">
-        Cancel
-      </button>
-    </form>
-  </div>
+ 
 </div>
