--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -14,10 +14,9 @@
     Transfer Tokens
   </button>
 
-   <button class="btn btn-success mb-4 mx-2" (click)="toggleMintForm()">
-   Mint Tokens
+  <button class="btn btn-success mb-4 mx-2" (click)="toggleMintForm()">
+    Mint Tokens
   </button>
-
 
   <div *ngIf="showForm" class="card p-4 mb-4">
     <form [formGroup]="accountForm" (ngSubmit)="addAccount()">
@@ -218,7 +217,7 @@
       </button>
     </form>
   </div>
-<div *ngIf="showMintForm" class="card p-4 mb-4">
+  <div *ngIf="showMintForm" class="card p-4 mb-4">
     <h2 class="mb-4">Mint Tokens</h2>
     <form [formGroup]="mintForm" (ngSubmit)="mintTokens()">
       <div class="form-group mb-3">
@@ -267,8 +266,6 @@
       </button>
     </form>
 
-
-
     <div *ngIf="queriedAccount" class="mt-4">
       <h3>Account Details</h3>
       <p>
@@ -300,10 +297,8 @@
     </div>
   </div>
 
-  
-
-  <div class="card p-4">
-    <h2 class="mb-4">All Accounts</h2>
+  <h2 class="mb-4">All Accounts</h2>
+  <div class="card p-1 my-4 table-responsive">
     <table class="table table-striped table-responsive">
       <thead>
         <tr>
