--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
-<nav class="navbar">
-  <a class="navbar-brand" routerLink="/">Token Management App</a>
-  <div class="navbar-nav">
-    <a class="nav-item nav-link" *ngIf="!authService.getAuthStatus()" routerLink="/login">Login</a>
-    <a class="nav-item nav-link" *ngIf="authService.getAuthStatus()" (click)="logout()">Logout</a>
-    <a class="nav-item nav-link" *ngIf="authService.getAuthStatus()" routerLink="/dashboard">Dashboard</a>
-    <a class="nav-item nav-link" *ngIf="authService.getAuthStatus() && authService.isAdmin()" routerLink="/admin">Admin</a>
+<nav class="navbar navbar-dark" style="background-color: #1b1f3b; font-size: 1.5rem;">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">Token Management App</a>
+    <div class="d-flex ms-auto">
+      <a class="nav-item nav-link" *ngIf="!authService.getAuthStatus() && !isActive('/login')" routerLink="/login">Login</a>
+      <a class="nav-item nav-link" *ngIf="authService.getAuthStatus() && !isActive('/dashboard')" routerLink="/dashboard">Dashboard</a>
+      <a class="nav-item nav-link" *ngIf="authService.getAuthStatus() && authService.isAdmin() && !isActive('/admin')" routerLink="/admin">Admin</a>
+      <a class="nav-item nav-link" *ngIf="authService.getAuthStatus()" (click)="logout()">Logout</a>
+    </div>
   </div>
 </nav>
-<div class="container">
+<div class="container mt-3">
   <router-outlet></router-outlet>
 </div>
